<resources>
    <string name="app_name">UT_3_ConvensorDivisas</string>
    <string name="edt">Introduzca una Cantidad en €</string>
    <string name="tv1">Conversion de divisa</string>
    <string name="vip">Cliente VIP</string>
    <string name="bt">CONVERTIR</string>
    <string name="tv2">Cantidad en nueva divisa</string>

    <string-array name="divisas">
        <item>USD</item>
        <item>GBP</item>
        <item>CAD</item>
        <item>AUD</item>
        <item>JPY</item>
        <item>INR</item>
        <item>NZD</item>
        <item>CHF</item>
        <item>ZAR</item>
        <item>RUB</item>
    </string-array>
</resources>